[gd_scene format=3 uid="uid://dkv3xq43kebc"]

[ext_resource type="Script" uid="uid://c3sxks5cali1g" path="res://scenes/main.gd" id="1_o5qli"]
[ext_resource type="Script" uid="uid://buo415nhjgsrx" path="res://addons/simusdev/localization/SD_NodeLocalizatorProperty.gd" id="2_0wfyh"]

[sub_resource type="LabelSettings" id="LabelSettings_0wfyh"]
font_size = 48

[node name="Main" type="Control" unique_id=865553199 node_paths=PackedStringArray("_ip")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o5qli")
_ip = NodePath("MarginContainer/VBoxContainer/_ip")
metadata/_edit_horizontal_guides_ = [118.0]

[node name="Panel" type="Panel" parent="." unique_id=824574383]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="App-Name" type="Label" parent="." unique_id=1311156295]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.164
offset_bottom = -0.08000183
grow_horizontal = 2
grow_vertical = 2
text = "GD-Talk"
label_settings = SubResource("LabelSettings_0wfyh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1497823155]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.18200001
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -13.040009
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 128

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=980102914]
layout_mode = 2

[node name="_create_server" type="Button" parent="MarginContainer/VBoxContainer" unique_id=1473437049]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "Create Server"

[node name="SD_NodeLocalizatorProperty" type="Node" parent="MarginContainer/VBoxContainer/_create_server" unique_id=1372196587 node_paths=PackedStringArray("node")]
process_mode = 4
script = ExtResource("2_0wfyh")
node = NodePath("..")
key = &"gdtalk.create_server"
metadata/_custom_type_script = "uid://buo415nhjgsrx"

[node name="_connect_to_main" type="Button" parent="MarginContainer/VBoxContainer" unique_id=1779198180]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "Connect to main server"

[node name="SD_NodeLocalizatorProperty" type="Node" parent="MarginContainer/VBoxContainer/_connect_to_main" unique_id=854848103 node_paths=PackedStringArray("node")]
process_mode = 4
script = ExtResource("2_0wfyh")
node = NodePath("..")
key = &"gdtalk.connect_to_main"
metadata/_custom_type_script = "uid://buo415nhjgsrx"

[node name="_connect" type="Button" parent="MarginContainer/VBoxContainer" unique_id=2099486153]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "Connect"

[node name="SD_NodeLocalizatorProperty" type="Node" parent="MarginContainer/VBoxContainer/_connect" unique_id=211990861 node_paths=PackedStringArray("node")]
process_mode = 4
script = ExtResource("2_0wfyh")
node = NodePath("..")
key = &"gdtalk.connect"
metadata/_custom_type_script = "uid://buo415nhjgsrx"

[node name="_ip" type="LineEdit" parent="MarginContainer/VBoxContainer" unique_id=1142206353]
layout_mode = 2
text = "localhost"
placeholder_text = "IP"
alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/_create_server" to="." method="_on__create_server_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/_connect_to_main" to="." method="_on__connect_to_main_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/_connect" to="." method="_on__connect_pressed"]
